docs: :memo: update docs

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-github: Josee9988
-custom: ['https://www.paypal.me/josee9988']
+github: CodeDesignPlus
+custom: ['https://paypal.me/CodeDesignPlus?country.x=CO&locale.x=es_XC']
